// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:PopOver with offset: default 1`] = `
<div>
  <div
    class="cxd-Form-item cxd-Form-item--normal"
    data-role="form-item"
  >
    <label
      class="cxd-Form-label"
    >
      <span>
        <span
          class="cxd-TplField"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="cxd-Form-static"
    >
      <div
        class="cxd-Field--popOverAble cxd-Form-control"
      >
        <span
          class="cxd-PlainField"
        >
          static
        </span>
        <span
          class="cxd-Field-popOverBtn"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover no offset 1`] = `
<div>
  <div
    class="cxd-Form-item cxd-Form-item--normal"
    data-role="form-item"
  >
    <label
      class="cxd-Form-label"
    >
      <span>
        <span
          class="cxd-TplField"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="cxd-Form-static"
    >
      <div
        class="cxd-Field--popOverAble cxd-Form-control in has-popover"
      >
        <span
          class="cxd-PlainField"
        >
          static
        </span>
        <span
          class="cxd-Field-popOverBtn"
          style="position: relative;"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
          <div
            class="resize-sensor"
            style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
          >
            
  
            <div
              class="resize-sensor-expand"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-shrink"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-appear"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
            />
          </div>
        </span>
        <div
          class="cxd-PopOver cxd-PopOverAble-popover cxd-PopOver--right"
          style="display: block; left: 0px; top: 0px; position: relative;"
          theme="cxd"
        >
          <div
            class="cxd-Panel cxd-Panel--default"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-body"
            >
              <span
                class="cxd-TplField"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
          <div
            class="resize-sensor"
            style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
          >
            
  
            <div
              class="resize-sensor-expand"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-shrink"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-appear"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover with offset 1`] = `
<div>
  <div
    class="cxd-Form-item cxd-Form-item--normal"
    data-role="form-item"
  >
    <label
      class="cxd-Form-label"
    >
      <span>
        <span
          class="cxd-TplField"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="cxd-Form-static"
    >
      <div
        class="cxd-Field--popOverAble cxd-Form-control in has-popover"
      >
        <span
          class="cxd-PlainField"
        >
          static
        </span>
        <span
          class="cxd-Field-popOverBtn"
          style="position: relative;"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
          <div
            class="resize-sensor"
            style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
          >
            
  
            <div
              class="resize-sensor-expand"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-shrink"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-appear"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
            />
          </div>
        </span>
        <div
          class="cxd-PopOver cxd-PopOverAble-popover cxd-PopOver--right"
          style="display: block; left: 101px; top: 102px; position: relative;"
          theme="cxd"
        >
          <div
            class="cxd-Panel cxd-Panel--default"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-body"
            >
              <span
                class="cxd-TplField"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
          <div
            class="resize-sensor"
            style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
          >
            
  
            <div
              class="resize-sensor-expand"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-shrink"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
    
              <div
                style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
              />
              
  
            </div>
            
  
            <div
              class="resize-sensor-appear"
              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
